# prestapy

./: .gitignore  pyproject.toml
prestapy/: cli.py
prestapy/prestashop_ep/: __init__.py  base.py  brands.py  category.py  feature.py  product.py  stock.py
tests/: test_brands.py  test_features.py  test_product.py  test_ps_endpoint.py
